2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-sound.c: (mb_game_sound_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/ui/game.c: (game_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-network-player.c: (game_network_player_init): use
	G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-2-player.c: (game_2_player_init),
	(game_2_player_class_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-network-player-manager.c:
	(game_network_player_manager_init),
	(game_network_player_manager_class_init): use G_DEFINE_TYPE_WITH_CODE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-network-server.c: (ui_network_server_init): use
	G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-1-player-manager.c: (game_1_player_manager_init): use
	G_DEFINE_TYPE_WITH_CODE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-1-player.c: (game_1_player_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-network-client.c: (ui_network_client_init): use
	G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/keyboard-properties.c: use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/util/clock.c: (mb_clock_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/view/monkey-canvas.c: (monkey_canvas_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/view/monkey-view.c: (monkey_view_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/view/mini-view.c: (mb_mini_view_init): use G_DEFINE_TYPE

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (ui_main_new), (leave_fullscreen),